<resources>
    <string name="app_name">Sticker Counter</string>
    <string name="button_to_db_activity">Добавить в базу</string>
    <string name="sticker_counter_application">SCA 1.1</string>
    <string name="second_activity_header">Статистика</string>
    <string name="quantity_second">Количество</string>
    <string name="price_second">Цена (за шт.)</string>
    <string name="addDealButton">Добавить продажу</string>
    <string name="show_db_entries">Удалить запись</string>
    <string name="date_view">Дата</string>
    <string name="statistics_fiels">Статистика</string>
    <string name="last_sells">\nПоследние продажи</string>
    <string name="usd_currency">usd_currency</string>
    <string name="kurs_po_cb">Курс $ по ЦБ: </string>
    <string name="rub"> руб.</string>
    <string name="statview">statview</string>
    <string name="kurs_dhgate">Курс покупки: ~ </string>
    <string name="month_sells">Продано за месяц:</string>
    <string name="monthmarginal">MonthMarginal</string>
    <string name="export_btn">Экспорт</string>
    <string name="startdate">Выбор начальной даты</string>
    <string name="enddate">Выбор конечной даты</string>
    <string name="export_header">Экспорт базы продаж</string>
    <string name="export">Экспорт</string>
    <string name="callback_list">Список пуст</string>
    <string name="call_list_header">Кому перезвонить:</string>
    <string name="callback_add_buttontext">Добавить CallBack</string>
    <string name="comment">Комментарий</string>
    <string name="callback_name">Имя</string>
    <string name="callback_phonenum">Номер телефона</string>
    <string name="lastCalls">Последние 15 вызовов</string>
    <string name="callbackandexport">Экспорт и CallBack</string>
    <string name="beznal_text">Безнал</string>
    <string-array name="products_array">
        <item>Windows 10 Наклейка</item>
        <item>Windows 7 Наклейка</item>
        <item>Windows 10 Ключ</item>
        <item>Windows 7 Ключ</item>
        <item>Office 2016 PP Ключ</item>
        <item>Office 2019 PP Ключ</item>
        <item>OEM-Пакет Windows 10</item>
        <item>Другое</item>
    </string-array>

</resources>
