<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context="ru.loveandpepper.stickercounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_export"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_business"
            android:hapticFeedbackEnabled="false"
            android:onClick="exportButtonClick"
            android:text="@string/callbackandexport" />

        <TextView
            android:id="@+id/header"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:soundEffectsEnabled="false"
            android:text="@string/sticker_counter_application"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#1E90FF" />

    </LinearLayout>


    <Spinner
        android:id="@+id/products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:entries="@array/products_array"
        android:spinnerMode="dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:ems="8"
            android:hint="@string/price_second"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editText_Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:ems="8"
            android:hint="@string/quantity_second"
            android:inputType="number"
            android:textAlignment="center" />
    </LinearLayout>


    <Button
        android:id="@+id/button_add"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:drawableLeft="@drawable/ic_add_to_base"
        android:onClick="AddSellToBase"
        android:text="@string/button_to_db_activity" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="0dp">

        <Button
            android:id="@+id/button_delete"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="50"
            android:drawableLeft="@drawable/ic_delete"
            android:onClick="deleteEntry"
            android:text="@string/show_db_entries" />

        <Button
            android:id="@+id/statisticsButton"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="50"
            android:drawableLeft="@drawable/ic_statictics"
            android:onClick="statStart"
            android:text="@string/statistics_fiels" />
    </LinearLayout>

    <TextView
        android:id="@+id/currentDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/statisticsField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistics_fiels"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>