<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">



    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:hint="@string/callback_phonenum"
        android:inputType="phone"
        android:singleLine="true" />

        <ImageButton
            android:id="@+id/imageButtonFromCalls"
            style="@android:style/Widget.Holo.Light.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:onClick="onClickPhone"
            app:srcCompat="@drawable/ic_calljournal" />



</LinearLayout>


    <ListView
        android:id="@+id/callsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone"/>

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/callback_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="textPersonName" />

</LinearLayout>